--- a/.github/workflows/module62.yml
+++ b/.github/workflows/module62.yml
@@ -10,7 +10,7 @@ jobs:
   my_first_job:
     name: My First Job
     runs-on: ubuntu-latest
-    # environment: dev
+    environment: dev
     outputs:
 
       output1: ${{ steps.step1.outputs.test }}
@@ -21,14 +21,15 @@ jobs:
       run: echo "test=hello" >> $GITHUB_OUTPUT
     - id: step2
       run: echo "test=world" >> $GITHUB_OUTPUT
-      # env:
-      #     MY_SECRET: ${{ secrets.MY_SECRET }}
+      env:
+        MY_SECRET: ${{ secrets.SECRET1 }}
+        MY_VAR: ${{ vars.SECRET1 }}
 
   my_second_job:
     name: My Second Job
     runs-on: ubuntu-latest
     needs: my_first_job  # This job will only run if the first job is successful
-    # environment: dev
+    environment: dev
     steps:
     - run: |
         # Create local variables from job outputs
@@ -38,5 +39,6 @@ jobs:
         # Echo the variables
         echo "Output 1: $output1"
         echo "Output 2: $output2"
-      # env:
-      #     MY_SECRET: ${{ secrets.MY_SECRET }}
+      env:
+          MY_SECRET: ${{ secrets.SECRET1 }}
+          MY_VAR: ${{ vars.SECRET1 }}
